Update README, adjust printing of checksums

--- a/README.Rmd
+++ b/README.Rmd
@@ -57,8 +57,8 @@ The [R_analysis](/R_analysis) directory contains all files related to the R anal
 
 The [scripts](/R_analysis/scripts) directory contains the following files:
 
-- [SSFA_0_RStudioVersion.R](/R_analysis/scripts/SSFA_0_RStudioVersion.R): script to get the used version of RStudio and write it to a TXT file ([RStudioVersion.txt](/R_analysis/scripts/RStudioVersion.txt)). This is necessary as the function `RStudio.Version()` can only be run in an interactive session (see [this post](https://community.rstudio.com/t/rstudio-version-not-found-on-knit/8088) for details).
-- [SSFA_0_CreateRC.Rmd](/R_analysis/scripts/SSFA_0_CreateRC.Rmd): script used to create this research compendium - it is not part of the analysis *per se* and is not meant to be run again. Rendered to [SSFA_0_CreateRC.md](/R_analysis/scripts/SSFA_0_CreateRC.md).  
+- [SSFA_0_RStudioVersion.R](/R_analysis/scripts/SSFA_0_RStudioVersion.R): script to get the used version of RStudio and write it to a TXT file ([SSFA_0_RStudioVersion.txt](/R_analysis/scripts/SSFA_0_RStudioVersion.txt)). This is necessary as the function `RStudio.Version()` can only be run in an interactive session (see [this post](https://community.rstudio.com/t/rstudio-version-not-found-on-knit/8088) for details).
+- [SSFA_0_CreateRC.Rmd](/R_analysis/scripts/SSFA_0_CreateRC.Rmd): script used to create this research compendium - it is not part of the analysis *per se* and is not meant to be run again. Rendered to [SSFA_0_CreateRC.html](/R_analysis/scripts/SSFA_0_CreateRC.html) and [SSFA_0_CreateRC.md](/R_analysis/scripts/SSFA_0_CreateRC.md).  
 - [SSFA_1_Import.Rmd](/R_analysis/scripts/SSFA_1_Import.Rmd): script to import the raw, input data. Rendered to [SSFA_1_Import.md](/R_analysis/scripts/SSFA_1_Import.md) and [SSFA_1_Import.html](/R_analysis/scripts/SSFA_1_Import.html).  
 - [SSFA_2_Summary-stats.Rmd](/R_analysis/scripts/SSFA_2_Summary-stats.Rmd): script to compute group-wise summary statistics. Rendered to [SSFA_2_Summary-stats.md](/R_analysis/scripts/SSFA_2_Summary-stats.md) and [SSFA_2_Summary-stats.html](/R_analysis/scripts/SSFA_2_Summary-stats.html).  
 - [SSFA_3_Plots.Rmd](/R_analysis/scripts/SSFA_3_Plots.Rmd): script to produce plots for each SSFA variable. Rendered to [SSFA_3_Plots.md](/R_analysis/scripts/SSFA_3_Plots.md) and [SSFA_3_Plots.html](/R_analysis/scripts/SSFA_3_Plots.html).  
