--- a/R_analysis/scripts/SSFA_2_Summary-stats.Rmd
+++ b/R_analysis/scripts/SSFA_2_Summary-stats.Rmd
@@ -71,21 +71,16 @@ library(tidyverse)
 
 
 # Read in data
-## Get names, path and information of input file 
+## Get name and path of input file 
 ```{r}
-info_in <- list.files(dir_in, pattern = "\\.Rbin$", full.names = TRUE) %>% 
-           md5sum()
-```
-
-The checksum (MD5 hashes) of the loaded file is:  
-```{r, echo = FALSE}
-data.frame(files = basename(names(info_in)), checksum = info_in, row.names = NULL)
+info_in <- list.files(dir_in, pattern = "\\.Rbin$", full.names = TRUE)
+info_in
 ```
 
 
 ## Read in Rbin file
 ```{r}
-all_data <- loadObject(names(info_in))
+all_data <- loadObject(info_in)
 str(all_data)
 ```
 
