--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,6 @@ output:
 
 <!-- badges: end -->
 
-[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4439450.svg)](https://doi.org/10.5281/zenodo.4439450)
 
 ```{r, echo = FALSE}
 knitr::opts_chunk$set(collapse = TRUE, comment = "NA")
@@ -29,7 +28,9 @@ repo <- basename(getwd())
 
 This repository contains the data and code for the paper:
 
-> `r Authors` (submitted). *`r Title`* Wear <https://doi.org/xxx/xxx>
+> `r Authors` (submitted). *`r Title`*. Pre-print <https://doi.org/10.5281/zenodo.4671438>
+
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4671438.svg)](https://doi.org/10.5281/zenodo.4671438)
 
 # How to cite
 
@@ -37,6 +38,7 @@ Please cite this compendium as:
 
 > `r Authors` (`r format(Sys.Date(), "%Y")`). Compendium of code and data for *`r Title`* Accessed `r format(Sys.Date(), "%d %b %Y")`. Online at <https://doi.org/10.5281/zenodo.4439450>
 
+[![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.4439450.svg)](https://doi.org/10.5281/zenodo.4439450)
 
 # Contents
 
